feat(torneios): Adicionadas novas funcionalidades para a inclusão de torneios